# MiniACSIncome

./: .gitignore  README.md  noxfile.py  population_model.ipynb  pyproject.toml  train_on_tabular_datasets.py
src/miniacsincome/: __init__.py  cases.py  miniacsincome.py
tests/: test_miniacsincome.py
