[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "miniacsincome"
authors = [
    { name = "David Boetius", email = "david.boetius@uni-konstanz.de" }
]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch>=1.12.1,<3.0",
    "numpy>=1.25,<3.0",
    "folktables==0.0.12",
    "torchstats==0.1.0",
    "dill==0.3.8",
    "huggingface_hub==0.32.0",
]

[project.optional-dependencies]
recreate = [
    "pandas==2.1.4",
    "seaborn==0.12.2",
    "matplotlib>=3.8.2,<3.9.0",
    "tqdm>=4.66.5,<4.67",
    "jupyter==1.1.1",
    "papermill>=2.6.0,<3.0",
    "optuna>=3.5.0,<4.0",
]
all = ["miniacsincome[recreate]"]

[project.urls]
Homepage = "https://github.com/sen-uni-kn/MiniACSIncome"
Repository = "https://github.com/sen-uni-kn/MiniACSIncome.git"
Issues = "https://github.com/sen-uni-kn/MiniACSIncome/issues"

